# olduvai

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LEGAL.md  README.md  SECURITY.md  SIGNING.md  THIRD-PARTY-NOTICES.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
assets/: README.md
assets/data/: menus.json
assets/icon/: Olduvai.icns
cmake/: embed_binary.cmake  embed_text.cmake
docs/: ARCHITECTURE.md  AUDIO.md  BUILDING.md  FRAME_LOOP.md  LINUX_APPIMAGE.md  METHOD.md
packaging/: build_appimage_linux.sh  build_universal_sdl2.sh  deploy_dlls_windows.sh  make_bundle.sh  make_dmg_macos.sh  package_windows.sh
packaging/macos/: Info-cli.plist.in
packaging/windows/: olduvai.rc.in
scripts/: bake_hd_sfx.py  check_commit_range.sh  check_layers.sh  check_release_version.sh  check_tree.sh
scripts/hooks/: commit-msg
src/app/: cli_args.cpp  cli_args.hpp  config.cpp  config.hpp  first_run.cpp  first_run.hpp  main.cpp  options_resolve.cpp  options_resolve.hpp  trace_main.cpp
src/core/: collision_bitmap.hpp  constants.hpp  game_tables.cpp  game_tables.hpp  rng.cpp  rng.hpp  types.hpp
src/enhance/: enhanced_hud.cpp  enhanced_hud.hpp  hd_asset_cache.cpp  hd_asset_cache.hpp  hd_text.cpp  hd_text.hpp  mmpx.cpp  mmpx.hpp  omniscale.cpp  omniscale.hpp  pixel_scalers.cpp  pixel_scalers.hpp  upscale.cpp  upscale.hpp  xbr.cpp  xbr.hpp
src/formats/: cur.cpp  cur.hpp  dur.cpp  dur.hpp  lzss.cpp  lzss.hpp  mat.cpp  mat.hpp  mdi.cpp  mdi.hpp  packbits.cpp  packbits.hpp  pc1.cpp  pc1.hpp  unsqz.cpp  unsqz.hpp  voc.cpp  voc.hpp
src/prepare/: cache_paths.cpp  cache_paths.hpp  exe_tables.cpp  exe_tables.hpp  game_files.cpp  game_files.hpp  prepare.cpp  prepare.hpp
src/presentation/: audio.cpp  audio.hpp  autofire.hpp  banner_fx.hpp  banners.cpp  banners.hpp  bg_compose.cpp  boss_app.cpp  boss_app.hpp  boss_render.cpp  boss_render.hpp  boss_widescreen.cpp  boss_widescreen.hpp  bug_capture.cpp  bug_capture.hpp  confirm_dialog.cpp  confirm_dialog.hpp  debug_overlay.cpp  debug_overlay.hpp  dialog_key_map.hpp  dynlib.hpp  enhance_flags.hpp  game_app.cpp  game_app.hpp  game_render.cpp  game_render.hpp  gamepad.cpp  gamepad.hpp  hd_sfx.hpp  host_midi.cpp  host_midi.hpp  hud_render.cpp  hud_render.hpp  image_out.cpp  image_out.hpp  l3_end_level.cpp  l3_end_level.hpp  level_save.cpp  level_save.hpp  level_setup.cpp  (+68 more)
src/systems/: boss.cpp  boss.hpp  boss_l2.cpp  boss_l2.hpp  boss_l4.cpp  boss_l4.hpp  boss_l6.cpp  boss_l6.hpp  cave_logic.cpp  cave_logic.hpp  collision_dispatch.cpp  collision_dispatch.hpp  collisions.cpp  collisions.hpp  fluid_bubbles.cpp  fluid_bubbles.hpp  frame_runner.cpp  frame_runner.hpp  monster_ai.cpp  monster_ai.hpp  player.cpp  player.hpp  score.cpp  score.hpp  screen_topology.hpp  secret.cpp  secret.hpp  spawning.cpp  spawning.hpp  transitions.cpp  transitions.hpp
tests/: _env_helpers.hpp  boss_replay_record.sh  cave_lerp.sh  first_run.sh  golden_trace.sh  main.cpp  mainmenu_shot.sh  menu_script.sh  pause_shot.sh  reinit_smoke.sh  report_form.sh  test_autofire.cpp  test_boss.cpp  test_boss_l2.cpp  test_boss_l4.cpp  test_boss_l6.cpp  test_boss_widescreen.cpp  test_cache_paths.cpp  test_collision_dispatch.cpp  test_collisions.cpp  test_confirm_dialog.cpp  test_constants.cpp  test_core.cpp  test_cur.cpp  test_dur.cpp  test_exe_tables.cpp  test_fluid_bubbles.cpp  test_game_files.cpp  test_game_render_hd.cpp  test_hd_asset_cache.cpp  test_hd_asset_cache_disk.cpp  test_lzss.cpp  test_mat.cpp  test_mdi.cpp  test_menu.cpp  test_menu_model.cpp  test_midi_seq.cpp  test_monster_ai.cpp  test_monster_ai_batch2.cpp  test_monster_ai_batch3.cpp  (+33 more)
tests/fixtures/: golden_trace_l1_300.txt  l3s4_cave_roundtrip.jsonl  mainmenu_golden.sha256  menu_baseline.sha256  menu_settings.sha256  pause_golden.sha256  report_save.sha256  ws_cave_sign.jsonl  ws_cave_sign.sha256  ws_pan_walk.jsonl  ws_pan_walk.sha256
tests/fuzz/: README.md  fuzz_formats.cpp
tools/: descent_pan_shot.cpp  l2_spawn_count.cpp  logo_render.cpp  mdi_dump.cpp  opl_music_dump.cpp  opl_sfx_dump.cpp  screen_atlas.cpp  secret_shot.cpp  widescreen_peek_shot.cpp
